pw/branches/r1117/Vendor/FLSDK/PscApi.h

unsigned __int32 __stdcall PSC_DiscTryAutogeneratedLicense();
unsigned __int32 __stdcall PSC_HardwareTryTrialLicense(
	bool createIfAbsent );
// Validate entered license number
unsigned __int32 __stdcall PSC_ValidateLicenseNumber(
	const char *licenseNumber,
	unsigned __int32 encodingId[ 4 ] );
// Try to check normal license (always resets previous license, on success sets new current license)
unsigned __int32 __stdcall PSC_HardwareTryNormalLicense(
	const char *licenseNumber );
// Create or load license, get hardware code
unsigned __int32 __stdcall PSC_HardwareCreateOrLoadNormalLicenseAndGetHardwareCode(
	const char *licenseNumber,
	char *hardwareCodeBuffer,
	size_t *hardwareCodeBufferSize );
// Activate current license
unsigned __int32 __stdcall PSC_HardwareActivateAndStoreNormalLicense(
	const char *key );
unsigned __int32 __stdcall PSC_HardwareDeactivateLicense( 
	const char *licenseNumber,
	char *hardwareCodeBuffer,
	size_t *hardwareCodeBufferSize );
// Initialize new session
unsigned __int32 __stdcall PSC_SrvBndClientInitializeSession(
	UUID sessionGuid );
// Start session (get or restore license from server)
unsigned __int32 __stdcall PSC_SrvBndClientStartSession();
// Approve session
unsigned __int32 __stdcall PSC_SrvBndClientApproveSession();
// Finish and deinitialize session (get license back to the server and free resources)
unsigned __int32 __stdcall PSC_SrvBndClientFinishAndDeinitializeSession();
// Process request
unsigned __int32 __stdcall PSC_SrvBndServerProcessRequest(
	unsigned __int32 languageId,
	char *requestDataBuffer,
	size_t requestDataBufferSize,
	char *responseDataBuffer,
	size_t *responseDataBufferSize );
// Perform external binding check
unsigned __int32 __stdcall PSC_ExternalBindingCheck();
unsigned __int32 __stdcall PSC_RemoveTrial();
// Remove history of license usage (number of runs, time of last run etc.)
unsigned __int32 __stdcall PSC_RemoveHistory();
// Remove all licenses including history
unsigned __int32 __stdcall PSC_RemoveAllLicenses();
// Remove hidden information about deactivated licenses
unsigned __int32 __stdcall PSC_RemoveHiddenDeactivationInfo();
// Try to open document
unsigned __int32 __stdcall PSC_HardwareCheckDocument(
	HANDLE fileHandle,
	unsigned __int32 documentId[ 4 ],
	unsigned __int32 *errorCode );
// Try to check normal license
unsigned __int32 __stdcall PSC_HardwareTryDocumentLicense(
	HANDLE fileHandle,
	unsigned __int32 documentId[ 4 ],
	const char *licenseNumber,
	unsigned __int32 *errorCode );
// Create or load license, get hardware code
unsigned __int32 __stdcall PSC_HardwareCreateOrLoadDocumentLicenseAndGetHardwareCode(
	unsigned __int32 documentId[ 4 ],
	const char *licenseNumber,
	char *hardwareCodeBuffer,
	size_t *hardwareCodeBufferSize );
// Activate current license
unsigned __int32 __stdcall PSC_HardwareActivateAndStoreDocumentLicense(
	const char *key );
// Open protected document (complex function implemented in user interface project)
// Return values:
//   PSC_STATUS_SUCCESS - success
//   PSC_STATUS_BAD_FORMAT - the file is not protected document
//   Other return values for errors are also possible
unsigned __int32 __stdcall PSC_DocumentOpen( HANDLE documentFile );
// Get size of protected document (hidden function: not exported from protect.dll in final version)
// Return values:
//   PSC_STATUS_SUCCESS - success (documentSize contains size of document)
//   Other return values for errors are also possible
unsigned __int32 __stdcall PSC_DocumentGetSize( HANDLE documentFile, size_t *documentSize );
// Get data (hidden function: not exported from protect.dll in final version)
// Return values:
//   PSC_STATUS_SUCCESS - success (dataBuffer will contain decrypted data block)
//   Other return values for errors are also possible
unsigned __int32 __stdcall PSC_DocumentGetData( HANDLE documentFile, void *dataBuffer, size_t dataOffset, size_t dataSize );
// Close protected document (hidden function: not exported from protect.dll in final version)
// Return values:
//   PSC_STATUS_SUCCESS - success
//   Other return values for errors are also possible
unsigned __int32 __stdcall PSC_DocumentClose( HANDLE documentFile );