pw/branches/r1117/Vendor/FLSDK/CSharp/PscApi.cs


		// Try to check autogenerated license
#if PS_BIND_TO_HARDWARE_AFTER_CD_SUCCESS
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		UInt32 PSC_DiscTryAutogeneratedLicense();
#endif

#endif

		//
		//	Functions for computer-based initalization (activation)
		//

#if PS_HARDWARE_BASED_INITIALIZATION_SUPPORTED || PS_DISC_WITH_BACKUP_BASED_INITIALIZATION_SUPPORTED

		// Try to create/check trial license
#if PS_TRIAL_PERIOD_SUPPORTED
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareTryTrialLicense(  [In, MarshalAs(UnmanagedType.U1)]Boolean createIfAbsent );
#endif

		// Validate entered license number
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_ValidateLicenseNumber(
			[In, MarshalAs( UnmanagedType.LPStr )]String licenseNumber, [In, MarshalAs( UnmanagedType.LPArray, SizeConst = 4 )]UInt32[] encodingId );

		// Try to check normal license
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareTryNormalLicense( [In, MarshalAs( UnmanagedType.LPStr )]String licenseNumber );

		// Create or load license, get hardware code
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareCreateOrLoadNormalLicenseAndGetHardwareCode(
			[In, MarshalAs( UnmanagedType.LPStr )]String licenseNumber,
			[In, MarshalAs( UnmanagedType.LPArray, SizeParamIndex = 3 )]byte[] hardwareCodeBuffer,
			ref int hardwareCodeBufferSize );

		// Activate current license
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareActivateAndStoreNormalLicense( [In, MarshalAs( UnmanagedType.LPStr )]String key );

		// Deactivate current license
#if OPTION_ENABLE_DEACTIVATION
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareDeactivateLicense( 
			[In, MarshalAs( UnmanagedType.LPStr )]String licenseNumber,
			[In, MarshalAs( UnmanagedType.LPArray, SizeParamIndex = 3 )]byte[] hardwareCodeBuffer,
			ref int hardwareCodeBufferSize );
#endif

#endif

		//
		//	Functions for server-based initialization
		//

#if PS_SERVER_BASED_INITIALIZATION_CLIENT

		// Initialize new session
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_SrvBndClientInitializeSession( UUID sessionGuid );

		// Start session (get or restore license from server)
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_SrvBndClientStartSession();

		// Approve session
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_SrvBndClientApproveSession();

		// Finish and deinitialize session (get license back to the server and free resources)
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_SrvBndClientFinishAndDeinitializeSession();

#endif

#if PS_SERVER_BASED_INITIALIZATION_SERVER

		// Process request
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_SrvBndServerProcessRequest(
			UInt32 languageId,
			[In, MarshalAs(UnmanagedType.LPArray, SizeParamIndex=3)]byte[] requestDataBuffer,
			int requestDataBufferSize,
			[In, MarshalAs(UnmanagedType.LPArray, SizeParamIndex=5)]byte[] responseDataBuffer,
			ref int responseDataBufferSize );

#endif

		//
		// Functions for external binding initialization
		//

#if PS_EXTERNAL_BASED_INITIALIZATION_SUPPORTED

		// Perform external binding check
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_ExternalBindingCheck();

#endif

		//
		//	Hidden info remover (these functions are not accessible in user interface project)
		//

#if TRIAL_INFO_REMOVER

		// Remove trial information
#if PS_TRIAL_PERIOD_SUPPORTED
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_RemoveTrial();
#endif

		// Remove history of license usage (number of runs, time of last run etc.)
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_RemoveHistory();

		// Remove all licenses including history
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_RemoveAllLicenses();

		// Remove hidden information about deactivated licenses
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_RemoveHiddenDeactivationInfo();

#endif

		//
		//	Protection of documents
		//

#if OPTION_DATA_FILES_PROTECTION

		// Try to open document
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareCheckDocument(
			IntPtr fileHandle,
			[In, MarshalAs(UnmanagedType.LPArray, SizeConst = 4)]UInt32[] documentId,
			ref UInt32 errorCode );

		// Try to check normal license
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareTryDocumentLicense(
			IntPtr fileHandle,
			[In, MarshalAs(UnmanagedType.LPArray, SizeConst = 4)]UInt32[] documentId,
			[In, MarshalAs(UnmanagedType.LPStr)]String licenseNumber,
			ref UInt32 errorCode );

		// Create or load license, get hardware code
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareCreateOrLoadDocumentLicenseAndGetHardwareCode(
			[In, MarshalAs(UnmanagedType.LPArray, SizeConst = 4)]UInt32[] documentId,
			[In, MarshalAs(UnmanagedType.LPStr)]String licenseNumber,
			[In, MarshalAs(UnmanagedType.LPArray, SizeParamIndex=4)] byte[] hardwareCodeBuffer,
			ref int hardwareCodeBufferSize );

		// Activate current license
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_HardwareActivateAndStoreDocumentLicense(
			[In, MarshalAs(UnmanagedType.LPStr)]String key );

		// Open protected document (complex function implemented in user interface project)
		// Return values:
		//   PSC_STATUS_SUCCESS - success
		//   PSC_STATUS_BAD_FORMAT - the file is not protected document
		//   Other return values for errors are also possible
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_DocumentOpen( IntPtr documentFile );

#endif

		//
		//	Protection of documents (these functions are not accessible in user interface project)
		//

#if OPTION_DATA_FILES_PROTECTION

		// Get size of protected document (hidden function: not exported from protect.dll in final version)
		// Return values:
		//   PSC_STATUS_SUCCESS - success (documentSize contains size of document)
		//   Other return values for errors are also possible
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_DocumentGetSize( IntPtr documentFile, out int documentSize );

		// Get data (hidden function: not exported from protect.dll in final version)
		// Return values:
		//   PSC_STATUS_SUCCESS - success (dataBuffer will contain decrypted data block)
		//   Other return values for errors are also possible
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_DocumentGetData( IntPtr documentFile, [Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex=3 )]byte[] dataBuffer, int dataOffset, int dataSize );

		// Close protected document (hidden function: not exported from protect.dll in final version)
		// Return values:
		//   PSC_STATUS_SUCCESS - success
		//   Other return values for errors are also possible
		[DllImport( "protect.dll", CallingConvention = CallingConvention.StdCall )]
		public static extern UInt32 PSC_DocumentClose( IntPtr documentFile );

#endif
	}
}
